; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libevent/extr_event.c_event_base_active_by_signal.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libevent/extr_event.c_event_base_active_by_signal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.event_base = type { i32 }

@th_base_lock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @event_base_active_by_signal(%struct.event_base* %0, i32 %1) #0 {
  %3 = alloca %struct.event_base*, align 8
  %4 = alloca i32, align 4
  store %struct.event_base* %0, %struct.event_base** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.event_base*, %struct.event_base** %3, align 8
  %6 = load i32, i32* @th_base_lock, align 4
  %7 = call i32 @EVBASE_ACQUIRE_LOCK(%struct.event_base* %5, i32 %6)
  %8 = load %struct.event_base*, %struct.event_base** %3, align 8
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @evmap_signal_active_(%struct.event_base* %8, i32 %9, i32 1)
  %11 = load %struct.event_base*, %struct.event_base** %3, align 8
  %12 = load i32, i32* @th_base_lock, align 4
  %13 = call i32 @EVBASE_RELEASE_LOCK(%struct.event_base* %11, i32 %12)
  ret void
}

declare dso_local i32 @EVBASE_ACQUIRE_LOCK(%struct.event_base*, i32) #1

declare dso_local i32 @evmap_signal_active_(%struct.event_base*, i32, i32) #1

declare dso_local i32 @EVBASE_RELEASE_LOCK(%struct.event_base*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
